--- a/libs/search-widget/public/i18n/fr.json
+++ b/libs/search-widget/public/i18n/fr.json
@@ -57,11 +57,12 @@
 	"results.summary": "Résumé",
 	"suggest.intents": "Labels",
 	"suggest.paragraphs": "Paragraphes suggérés",
-	"tile.find-in-audio": "Rechercher dans l'audio",
-	"tile.find-in-document": "Rechercher dans le document",
-	"tile.find-in-image": "Rechercher dans l'image",
-	"tile.find-in-video": "Rechercher dans la vidéo",
-	"tile.full-transcripts": "Transcription complète",
-	"tile.search-results": "{{count}} résultats de recherche",
-	"tile.summary": "Résumé"
+	"viewer.find-in-audio": "Rechercher dans l'audio",
+	"viewer.find-in-document": "Rechercher dans le document",
+	"viewer.find-in-image": "Rechercher dans l'image",
+	"viewer.find-in-video": "Rechercher dans la vidéo",
+	"viewer.full-transcripts": "Transcription complète",
+	"viewer.items": "Éléments",
+	"viewer.search-results": "{{count}} résultats de recherche",
+	"viewer.summary": "Résumé"
 }
