--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -104,11 +104,13 @@
 	"accounts.no_users_found": "no user with this email address",
 	"accounts.users": "user(s)",
 	"activity.actor": "Actor",
+	"activity.chat": "Questions & Generative answers",
 	"activity.load-more": "Load more",
 	"activity.modified": "Edited",
 	"activity.new": "Created",
 	"activity.processed": "Processed",
 	"activity.resource": "Resource",
+	"activity.search": "Queries",
 	"activity.subtitle": "Last 30 days Knowledge box activity",
 	"activity.timestamp": "Time stamp",
 	"autocomplete.section.main": "Key concept suggestion",
