--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -96,7 +96,7 @@
 	"accounts.users": "usuari/s",
 	"activity.actor": "Actor",
 	"activity.chat": "Preguntes i respostes generatives",
-	"activity.load-more": "TODO",
+	"activity.load-more": "Carrega més",
 	"activity.modified": "Modificats",
 	"activity.new": "Creats",
 	"activity.processed": "Processats",
