--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -96,7 +96,7 @@
 	"accounts.users": "usuario/s",
 	"activity.actor": "Actor",
 	"activity.chat": "Preguntas y respuestas generativas",
-	"activity.load-more": "TODO",
+	"activity.load-more": "Cargar más",
 	"activity.modified": "Modificados",
 	"activity.new": "Creados",
 	"activity.processed": "Procesados",
