[sc-6455] Implement page to download activity (#897)
* Update sdk

* [sc-6455] Implement page to download activity

* Fix translations

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -95,11 +95,13 @@
 	"accounts.no_users_found": "No hemos encontrado a ningún usuario con este correo",
 	"accounts.users": "usuario/s",
 	"activity.actor": "Actor",
-	"activity.load-more": "TODO",
+	"activity.chat": "Preguntas y respuestas generativas",
+	"activity.load-more": "Cargar más",
 	"activity.modified": "Modificados",
 	"activity.new": "Creados",
 	"activity.processed": "Procesados",
 	"activity.resource": "Recurso",
+	"activity.search": "Consultas",
 	"activity.subtitle": "Actividad de la Caja de conocimiento de los últimos 30 días",
 	"autocomplete.section.main": "Palabras clave sugeridas",
 	"autocomplete.section.next_words": "Palabras sugeridas",
