--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -95,11 +95,13 @@
 	"accounts.no_users_found": "no existeix cap usuari amb aquest correu",
 	"accounts.users": "usuari/s",
 	"activity.actor": "Actor",
-	"activity.load-more": "TODO",
+	"activity.chat": "Preguntes i respostes generatives",
+	"activity.load-more": "Carrega més",
 	"activity.modified": "Modificats",
 	"activity.new": "Creats",
 	"activity.processed": "Processats",
 	"activity.resource": "Recurs",
+	"activity.search": "Consultes",
 	"activity.subtitle": "Activitat de la Caixa de coneixement dels últims 30 dies",
 	"autocomplete.section.main": "Paraules clau suggerides",
 	"autocomplete.section.next_words": "Paraules suggerides",
