[sc-6469]: Fix back to accounts button
- Remove `Back to accounts` button from the footer, as we have already a `Back` button in the header
- Fix Back behavior to display the list of accounts properly (was probably broken when we upgraded to ng16)
- Fix KB creation form from kb selection footer:
  - hide "create kb" button once we click on it
  - always enable cancel button
  - disabled the form during creation to prevent multiple clicks while creation is in progress
  - add error toast if creation fails

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -216,6 +216,7 @@
 	"empty.title": "No hem trobat cap resultat :(",
 	"entities.law": "Legal",
 	"entities.quantity": "Quantitats i mesures",
+	"error.creating-kb": "S'ha produït un error en crear el quadre de coneixement",
 	"error.deleting-resource": "No s'ha pogut suprimir el recurs",
 	"error.deleting-resources": "No s'ha pogut suprimir {{count}} recursos",
 	"error.reprocessing-resource": "No s'ha pogut tornar a processar el recurs",
