Add feedback and farewell pages

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -229,8 +229,21 @@
 	"error.deleting-resources": "No s'ha pogut suprimir {{count}} recursos",
 	"error.reprocessing-resource": "No s'ha pogut tornar a processar el recurs",
 	"error.reprocessing-resources": "S'ha produït un error en el reprocessament de {{count}} recursos",
-	"farewell.message": "<p>Ens sap greu que te'n vagis {{username}}!</p>\n<p>Ens assegurarem d'eliminar el teu usuari i dades de Nuclia. En nom de l'equip de Nuclia et volem agrair el temps que has dedicat a la nostra plataforma.</p>\n<p>Si creus que podriem haver fet alguna cosa millor, sisplau <a href=\"mailto:{{email}}\">fes-nos-ho saber</a>. Ens encantaria saber-ho.</p>\n<p>Gràcies!</p>",
-	"farewell.title": "Fins aviat 👋",
+	"farewell.response_submitted": "S'ha enviat la teva resposta.",
+	"farewell.see_again": "Esperem tornar-te a veure.",
+	"farewell.thanks_time": "Gràcies pel teu temps!",
+	"farewell.thanks_trust": "Gràcies per la teva confiança!",
+	"feedback.anything_else": "¿Algo más que quieras compartir? (Opcional)",
+	"feedback.reason.customer_service": "El servei al client va ser pitjor de l'esperat",
+	"feedback.reason.low_quality": "La qualitat va ser inferior a l'esperada",
+	"feedback.reason.missing_features": "Falten algunes funcionalitats",
+	"feedback.reason.other": "Un altre motiu",
+	"feedback.reason.switched_service": "Em canvio a un altre servei",
+	"feedback.reason.too_complex": "La facilitat d'ús va ser inferior a l'esperada",
+	"feedback.reason.too_expensive": "Es muy caro",
+	"feedback.reason.unused": "No utilitzo prou el servei",
+	"feedback.subtitle": "Abans de marxar, si us plau, feu-nos saber el motiu pel qual deixeu Nuclia:",
+	"feedback.title": "Ens sap greu que te'n vagis!",
 	"filter.search_ontology": "Cerca l'Ontologia",
 	"filter.suggested_classification": "Classificació suggerida",
 	"generic.accept": "Acceptar",
