--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -229,8 +229,21 @@
 	"error.deleting-resources": "Error al eliminar {{count}} recursos",
 	"error.reprocessing-resource": "Error al reprocesar el recurso",
 	"error.reprocessing-resources": "Error de reprocesamiento de {{count}} recursos",
-	"farewell.message": "<p>Nos entristece que te vayas {{username}}!</p>\n<p>Nos aseguraremos de eliminar tu usuario y datos de Nuclia. En nombre del equipo de Nuclia te queremos agradecer el tiempo que has dedicado a nuestra plataforma.</p>\n<p>Si crees que podríamos haber echo alguna cosa mejor, por favor <a href=\"mailto:{{email}}\">háznoslo saber</a>. Nos encantaría saberlo.</p>\n<p>Gracias!</p>",
-	"farewell.title": "Hasta pronto 👋",
+	"farewell.response_submitted": "Tu respuesta ha sido enviada.",
+	"farewell.see_again": "Esperamos verte de nuevo.",
+	"farewell.thanks_time": "¡Gracias por tu tiempo!",
+	"farewell.thanks_trust": "¡Gracias por tu confianza!",
+	"feedback.anything_else": "Alguna cosa més que vulguis compartir? (Opcional)",
+	"feedback.reason.customer_service": "El servicio al cliente fue peor de lo esperado",
+	"feedback.reason.low_quality": "La calidad fue inferior a la esperada",
+	"feedback.reason.missing_features": "Faltan algunas funcionalidades",
+	"feedback.reason.other": "Otro motivo",
+	"feedback.reason.switched_service": "Voy a cambiarme a otro servicio",
+	"feedback.reason.too_complex": "La facilidad de uso fue inferior a la esperada",
+	"feedback.reason.too_expensive": "És massa car",
+	"feedback.reason.unused": "No uso el servicio lo suficiente",
+	"feedback.subtitle": "Antes de irte, por favor explicanos el motivo por el cual te vas de Nuclia:",
+	"feedback.title": "¡Estamos tristes de verte partir!",
 	"filter.search_ontology": "Busca la Ontología",
 	"filter.suggested_classification": "Clasificación sugerida",
 	"generic.accept": "Aceptar",
