[sc-6226] Implement the delete account flow (#888)
* Add new endpoints

* [sc-6226] Implement the delete account flow

* Add feedback and farewell pages

* Modify cancel button

* Show days left

* Fix

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -23,7 +23,15 @@
 	"account.day_left": "Queda 1 dia",
 	"account.days_left": "Queden {{days}} dies",
 	"account.db_zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta compte. De forma predeterminada apareix la zona escollida a l’Account",
+	"account.delete.defer_delete": "Suprimeix el meu compte quan finalitzi la meva subscripció.",
+	"account.delete.delete_immediately": "Elimina el meu compte immediatament.",
+	"account.delete.delete_user": "Eliminar el meu usuari",
+	"account.delete.deletion_scheduled": "Se ha programado la eliminación de su cuenta.",
 	"account.delete.error": "S'ha produït un error al eliminar el compte",
+	"account.delete.expiration": "La teva subscripció caduca el",
+	"account.delete.keep_user": "Mantenir el meu usuari",
+	"account.delete.keep_user_title": "Vols mantenir el teu perfil d'usuari?",
+	"account.delete.subscription_detected": "S'ha detectat una subscripció activa",
 	"account.delete_account": "Eliminar compte",
 	"account.delete_account_confirm": "Vull eliminar el compte {{account}} i totes les dades que conté.",
 	"account.delete_account_confirm_title": "Eliminar el compte?",
@@ -221,8 +229,21 @@
 	"error.deleting-resources": "No s'ha pogut suprimir {{count}} recursos",
 	"error.reprocessing-resource": "No s'ha pogut tornar a processar el recurs",
 	"error.reprocessing-resources": "S'ha produït un error en el reprocessament de {{count}} recursos",
-	"farewell.message": "<p>Ens sap greu que te'n vagis {{username}}!</p>\n<p>Ens assegurarem d'eliminar el teu usuari i dades de Nuclia. En nom de l'equip de Nuclia et volem agrair el temps que has dedicat a la nostra plataforma.</p>\n<p>Si creus que podriem haver fet alguna cosa millor, sisplau <a href=\"mailto:{{email}}\">fes-nos-ho saber</a>. Ens encantaria saber-ho.</p>\n<p>Gràcies!</p>",
-	"farewell.title": "Fins aviat 👋",
+	"farewell.response_submitted": "S'ha enviat la teva resposta.",
+	"farewell.see_again": "Esperem tornar-te a veure.",
+	"farewell.thanks_time": "Gràcies pel teu temps!",
+	"farewell.thanks_trust": "Gràcies per la teva confiança!",
+	"feedback.anything_else": "¿Algo más que quieras compartir? (Opcional)",
+	"feedback.reason.customer_service": "El servei al client va ser pitjor de l'esperat",
+	"feedback.reason.low_quality": "La qualitat va ser inferior a l'esperada",
+	"feedback.reason.missing_features": "Falten algunes funcionalitats",
+	"feedback.reason.other": "Un altre motiu",
+	"feedback.reason.switched_service": "Em canvio a un altre servei",
+	"feedback.reason.too_complex": "La facilitat d'ús va ser inferior a l'esperada",
+	"feedback.reason.too_expensive": "Es muy caro",
+	"feedback.reason.unused": "No utilitzo prou el servei",
+	"feedback.subtitle": "Abans de marxar, si us plau, feu-nos saber el motiu pel qual deixeu Nuclia:",
+	"feedback.title": "Ens sap greu que te'n vagis!",
 	"filter.search_ontology": "Cerca l'Ontologia",
 	"filter.suggested_classification": "Classificació suggerida",
 	"generic.accept": "Acceptar",
