--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -24,7 +24,15 @@
 	"account.day_left": "1 day left",
 	"account.days_left": "{{days}} days left",
 	"account.db_zone_description": "Select the zone and the processing provider you would like to use for this account (defaults to the account’s zone)",
+	"account.delete.defer_delete": "Delete my account when my subscription ends.",
+	"account.delete.delete_immediately": "Delete my account immediately.",
+	"account.delete.delete_user": "Delete my user",
+	"account.delete.deletion_scheduled": "Deletion of your account has been scheduled.",
 	"account.delete.error": "Error when deleting the account",
+	"account.delete.expiration": "Your subscription expires on",
+	"account.delete.keep_user": "Keep my user",
+	"account.delete.keep_user_title": "Would you like to keep your user profile?",
+	"account.delete.subscription_detected": "Active subscription detected",
 	"account.delete_account": "Delete account",
 	"account.delete_account_confirm": "I want to delete the  {{account}} account and all its associated data.",
 	"account.delete_account_confirm_title": "Delete the account?",
@@ -233,8 +241,21 @@
 	"error.deleting-resources": "Deletion failed for {{count}} resources",
 	"error.reprocessing-resource": "Reprocessing the resource failed",
 	"error.reprocessing-resources": "Reprocessing failed for {{count}} resources",
-	"farewell.message": "<p>We are sad to see you go, {{username}}!</p>\n<p>We will make sure we remove your account and data from Nuclia. On behalf of Nuclia’s team, we thank you for the time you invested in our platform.</p>\n<p>If you think we could have done something better, please <a href=\"mailto:{{email}}\">let us know</a>. We would love to hear from you.</p>\n<p>Thank you!</p>",
-	"farewell.title": "See you soon 👋",
+	"farewell.response_submitted": "Your response has been submitted.",
+	"farewell.see_again": "We hope to see you again.",
+	"farewell.thanks_time": "Thank you for your time!",
+	"farewell.thanks_trust": "Thank you for your trust!",
+	"feedback.anything_else": "Anything else you want to share? (Optional)",
+	"feedback.reason.customer_service": "Customer service was less than expected",
+	"feedback.reason.low_quality": "Quality was less than expected",
+	"feedback.reason.missing_features": "Some features are missing",
+	"feedback.reason.other": "Other reason",
+	"feedback.reason.switched_service": "I’m switching to a different service",
+	"feedback.reason.too_complex": "Ease of use was less than expected",
+	"feedback.reason.too_expensive": "It’s too expensive",
+	"feedback.reason.unused": "I don’t use the service enough",
+	"feedback.subtitle": "Before you leave, please let us know the reason you are leaving Nuclia:",
+	"feedback.title": "We’re sad to see you go!",
 	"filter.search_ontology": "Search ontology ",
 	"filter.suggested_classification": "Suggested classification",
 	"generic.accept": "Accept",
