--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -816,6 +816,8 @@
 	"stash.widgets.filter": "Filtre",
 	"stash.widgets.filter.help": "Mostra els filtres a la barra de cerca",
 	"stash.widgets.filter_type": "Tipus de filtre",
+	"stash.widgets.hideSources": "Amaga les fonts",
+	"stash.widgets.hideSources.help": "Amaga les fonts utilitzades per generar la resposta",
 	"stash.widgets.hint_1": "Per mostrar correctament els resultats, l'amplada de la barra de cerca no hauria de ser inferior a 348px.",
 	"stash.widgets.hint_2": "Si el color de fons de la pàgina de cerca no és neutre, recordeu d'afegir un color de fons al quadre de cerca perquè sigui més fàcil de llegir.",
 	"stash.widgets.labels": "Filtrar per etiquetes",
