--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -846,6 +846,8 @@
 	"stash.widgets.filter": "Filter",
 	"stash.widgets.filter.help": "Displays filters in search bar",
 	"stash.widgets.filter_type": "Filter types",
+	"stash.widgets.hideSources": "Hide sources",
+	"stash.widgets.hideSources.help": "Hide sources used to generate the answer",
 	"stash.widgets.hint_1": "For the correct reading of the results, the width of the search bar should not be less than 384px.",
 	"stash.widgets.hint_2": "If your search page background color isn't neutral, remember to add a background color on your search box to make it easier to read.",
 	"stash.widgets.labels": "Filter by labels",
