--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -816,6 +816,8 @@
 	"stash.widgets.filter": "Filtrar",
 	"stash.widgets.filter.help": "Muestra filtros en la barra de búsqueda",
 	"stash.widgets.filter_type": "Tipos de filtro",
+	"stash.widgets.hideSources": "Ocultar fuentes",
+	"stash.widgets.hideSources.help": "Ocultar las fuentes utilizadas para generar la respuesta",
 	"stash.widgets.hint_1": "Para mostrar correctamente los resultados, el ancho de la barra de búsqueda no debería ser inferior a 384px.",
 	"stash.widgets.hint_2": "Si el color de fondo de su página de búsqueda no es neutral, recuerde agregar un color de fondo en su cuadro de búsqueda para que sea más fácil de leer.",
 	"stash.widgets.labels": "Filtrar per etiquetas",
