Add subscription table with new values

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -138,6 +138,7 @@
 	"billing.email": "Factures enviades a",
 	"billing.enterprise_ready": "Llest par a l'empresa",
 	"billing.estimate_cost": "Estima el teu cost",
+	"billing.extra_paragraphs_cost": "Si es supera el límit de paràgrafs emmagatzemats, es cobrarà {{preu}} per cada paràgraf addicional.",
 	"billing.features.anon": "Anonimat de dades",
 	"billing.features.apikey": "Clau d'API autoallotjada",
 	"billing.features.boost": "Potenciador d'indexació",
@@ -170,6 +171,7 @@
 	"billing.monthly_estimation.description": "El cost estimat proporcionat es basa en els valors definits i està subjecte a canvis si es modifiquen aquests valors.",
 	"billing.not_company": "No soc una empresa",
 	"billing.order_number": "Número de comanda",
+	"billing.paragraphs_per_file": "Un fitxer de text de 10 pàgines conté aproximadament 300 paràgrafs",
 	"billing.parameter.files": "Quants documents?",
 	"billing.parameter.media": "Quantes hores de vídeos/àudios?",
 	"billing.parameter.paragraphs": "Quants paràgrafs extrets?",
@@ -184,10 +186,16 @@
 	"billing.quotas": "Quotes mensuals",
 	"billing.quotas.answers": "Resposta generativa",
 	"billing.quotas.files": "Nombre màxim de fitxers",
+	"billing.quotas.ingestion": "Ingestió",
 	"billing.quotas.kbs": "Nombre de caixes de coneixement",
 	"billing.quotas.medias": "Indexació de vídeo i àudio",
+	"billing.quotas.paragraphs": "Número de paràgrafs",
+	"billing.quotas.paragraphs_stored": "Paràgrafs emmagatzemats",
+	"billing.quotas.search_inference": "Cerca / Inferència",
 	"billing.quotas.searches": "Recerques",
-	"billing.quotas.training": "Formació",
+	"billing.quotas.storage": "Emmagatzematge",
+	"billing.quotas.train": "Entrenar",
+	"billing.quotas.training": "Entrenament",
 	"billing.quotas.up-to": "Fins a",
 	"billing.review.confirm_subscription": "Confirma la teva subscripció",
 	"billing.review.cost": "Subscripció mensual de {{cost}} + costos dels consums amb un límit mensual de {{budget}}",
