--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -150,6 +150,7 @@
 	"billing.email": "Invoices sent to",
 	"billing.enterprise_ready": "We are enterprise ready",
 	"billing.estimate_cost": "Estimate your cost",
+	"billing.extra_paragraphs_cost": "If the stored paragraph limit included is exceeded, we will charge {{price}} /stored paragraph.",
 	"billing.features.anon": "Data Anonymization",
 	"billing.features.apikey": "Self-hosted API key",
 	"billing.features.boost": "Indexing booster",
@@ -182,6 +183,7 @@
 	"billing.monthly_estimation.description": "The estimated cost provided is based on the defined values and is subject to change if these values are modified.",
 	"billing.not_company": "I'm not a company",
 	"billing.order_number": "Order number",
+	"billing.paragraphs_per_file": "A 10-page text file contains approximately 300 paragraphs",
 	"billing.parameter.files": "How many documents?",
 	"billing.parameter.media": "How many hours of videos/audios?",
 	"billing.parameter.paragraphs": "How many extracted paragraphs?",
@@ -196,9 +198,15 @@
 	"billing.quotas": "Monthly quotas",
 	"billing.quotas.answers": "Generative answer",
 	"billing.quotas.files": "Maximum number of files",
+	"billing.quotas.ingestion": "Ingestion",
 	"billing.quotas.kbs": "Number of knowledge boxes",
 	"billing.quotas.medias": "Video & audio indexing ",
+	"billing.quotas.paragraphs": "Number of paragraph",
+	"billing.quotas.paragraphs_stored": "Paragraph stored",
+	"billing.quotas.search_inference": "Search / Inference",
 	"billing.quotas.searches": "Searches",
+	"billing.quotas.storage": "Storage",
+	"billing.quotas.train": "Train",
 	"billing.quotas.training": "Training",
 	"billing.quotas.up-to": "Up to",
 	"billing.review.confirm_subscription": "Confirm your subscription",
