--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -138,6 +138,7 @@
 	"billing.email": "Facturas enviadas a",
 	"billing.enterprise_ready": "Listo para la empresa",
 	"billing.estimate_cost": "Estima tu coste",
+	"billing.extra_paragraphs_cost": "Si se excede el límite de párrafos almacenados, se cobrarà {{price}} por cada párrafo adicional.",
 	"billing.features.anon": "Anonimización de datos",
 	"billing.features.apikey": "Clave de API autohospedada",
 	"billing.features.boost": "Refuerzo de indexación",
@@ -170,6 +171,7 @@
 	"billing.monthly_estimation.description": "El coste estimado proporcionado se basa en los valores definidos y está sujeto a cambios si se modifican estos valores.",
 	"billing.not_company": "No soy una empresa",
 	"billing.order_number": "Número de pedido",
+	"billing.paragraphs_per_file": "Un archivo de texto de 10 páginas contiene aproximadamente 300 párrafos",
 	"billing.parameter.files": "¿Cuántos documentos?",
 	"billing.parameter.media": "¿Cuántas horas de videos/audios?",
 	"billing.parameter.paragraphs": "¿Cuántos párrafos extraídos?",
@@ -184,10 +186,16 @@
 	"billing.quotas": "Cuotas mensuales",
 	"billing.quotas.answers": "Respuesta generativa",
 	"billing.quotas.files": "Cantidad máxima de archivos",
+	"billing.quotas.ingestion": "Ingestión",
 	"billing.quotas.kbs": "Número de cajas de conocimiento",
 	"billing.quotas.medias": "Indexación de video y audio",
+	"billing.quotas.paragraphs": "Número de parrafos",
+	"billing.quotas.paragraphs_stored": "Parrafos almacenados",
+	"billing.quotas.search_inference": "Búsqueda / Inferencia",
 	"billing.quotas.searches": "Búsquedas",
-	"billing.quotas.training": "Capacitación",
+	"billing.quotas.storage": "Almacenamiento",
+	"billing.quotas.train": "Entrenar",
+	"billing.quotas.training": "Entrenamiento",
 	"billing.quotas.up-to": "Hasta",
 	"billing.review.confirm_subscription": "Confirma tu suscripción",
 	"billing.review.cost": "Suscripción mensual de {{cost}}  + costes de los consumos con un límite mensual de {{budget}}",
