Modify budget calculator parameters

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -120,6 +120,7 @@
 	"billing.assistance": "Si us plau, <a href=\"{{url}}\"contacta amb nosaltres</a> per obtenir ajuda",
 	"billing.billing_details": "Dades de facturació",
 	"billing.budget_calculator": "Calculadora de pressupost",
+	"billing.budget_calculator.help": "La calculadora de pressupost et permet fer un pressupost mensual en funció dels vostres requisits específics.",
 	"billing.budget_description": "Per evitar despeses excessives en els consums mensuals, us recomanem establir un límit mensual. Si no s'estableix un límit, es poden generar càrrecs inesperats pels consums que superin la quantitat assignada.",
 	"billing.budget_warning": "El sobreconsum actual es facturarà aquest mes.<br>\nLa modificació del pressupost entrará en vigor el mes següent.",
 	"billing.cancel_subscription": "Cancel·la subscripció",
@@ -173,8 +174,11 @@
 	"billing.order_number": "Número de comanda",
 	"billing.paragraphs_per_file": "Un fitxer de text de 10 pàgines conté aproximadament 300 paràgrafs",
 	"billing.parameter.files": "Quants documents?",
+	"billing.parameter.generative": "Quantes respostes generatives?",
 	"billing.parameter.media": "Quantes hores de vídeos/àudios?",
-	"billing.parameter.paragraphs": "Quants paràgrafs extrets?",
+	"billing.parameter.paragraphs": "Quants paràgrafs emmagatzemats?",
+	"billing.parameter.paragraphs_processed": "Quants paragrafs processats?",
+	"billing.parameter.predict": "Quantes prediccions?",
 	"billing.parameter.qa": "Quantes respostes generatives?",
 	"billing.parameter.searches": "Quantes cerques?",
 	"billing.parameter.training": "Quantes hores d'entrenament?",
@@ -186,6 +190,7 @@
 	"billing.quotas": "Quotes mensuals",
 	"billing.quotas.answers": "Resposta generativa",
 	"billing.quotas.files": "Nombre màxim de fitxers",
+	"billing.quotas.files-up-to": "Arxius fins a",
 	"billing.quotas.ingestion": "Ingestió",
 	"billing.quotas.kbs": "Nombre de caixes de coneixement",
 	"billing.quotas.medias": "Indexació de vídeo i àudio",
