--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -131,6 +131,7 @@
 	"billing.billing_details": "Billing details",
 	"billing.budget": "On-demand budget",
 	"billing.budget_calculator": "Budget calculator",
+	"billing.budget_calculator.help": "The budget calculator will allow you to make a monthly budget based on your specific requirements.",
 	"billing.budget_description": "To prevent overspending on monthly consumables, we recommend setting a monthly economic limit.<br> Failing to set a limit may result in unexpected charges for any consumption beyond the allotted amount.",
 	"billing.budget_warning": "The current overconsumption will be billed this month.<br>\nThe budget change will take effect next month.",
 	"billing.cancel_subscription": "Cancel subscription",
@@ -185,8 +186,11 @@
 	"billing.order_number": "Order number",
 	"billing.paragraphs_per_file": "A 10-page text file contains approximately 300 paragraphs",
 	"billing.parameter.files": "How many documents?",
+	"billing.parameter.generative": "How many generative answers?",
 	"billing.parameter.media": "How many hours of videos/audios?",
-	"billing.parameter.paragraphs": "How many extracted paragraphs?",
+	"billing.parameter.paragraphs": "How many stored paragraphs?",
+	"billing.parameter.paragraphs_processed": "How many processed paragraphs?",
+	"billing.parameter.predict": "How many predicts?",
 	"billing.parameter.qa": "How many generative answers?",
 	"billing.parameter.searches": "How many searches?",
 	"billing.parameter.training": "How many hours of training?",
@@ -198,6 +202,7 @@
 	"billing.quotas": "Monthly quotas",
 	"billing.quotas.answers": "Generative answer",
 	"billing.quotas.files": "Maximum number of files",
+	"billing.quotas.files-up-to": "Files up to",
 	"billing.quotas.ingestion": "Ingestion",
 	"billing.quotas.kbs": "Number of knowledge boxes",
 	"billing.quotas.medias": "Video & audio indexing ",
