--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -120,6 +120,7 @@
 	"billing.assistance": "Por favor, <a href=\"{{url}}\">contacta con nosotros</a> para obtener ayuda.",
 	"billing.billing_details": "Datos de facturación",
 	"billing.budget_calculator": "Calculadora de presupuesto",
+	"billing.budget_calculator.help": "La calculadora de presupuesto te permite hacer un presupuesto mensual basado en tus requisitos específicos.",
 	"billing.budget_description": "Para evitar gastos excesivos en los consumos mensuales, recomendamos establecer un límite mensual.<br> Si no se establece un límite, se pueden generar cargos inesperados por los consumos que excedan la cantidad asignada.",
 	"billing.budget_warning": "El sobreconsumo actual se facturará este mes.<br>\nEl cambio de presupuesto entrará en vigencia el próximo mes.",
 	"billing.cancel_subscription": "Cancela suscripción",
@@ -173,8 +174,11 @@
 	"billing.order_number": "Número de pedido",
 	"billing.paragraphs_per_file": "Un archivo de texto de 10 páginas contiene aproximadamente 300 párrafos",
 	"billing.parameter.files": "¿Cuántos documentos?",
+	"billing.parameter.generative": "¿Cuántas respuestas generativas?",
 	"billing.parameter.media": "¿Cuántas horas de videos/audios?",
-	"billing.parameter.paragraphs": "¿Cuántos párrafos extraídos?",
+	"billing.parameter.paragraphs": "¿Cuántos párrafos almacenados?",
+	"billing.parameter.paragraphs_processed": "¿Cuantos parrafos procesados?",
+	"billing.parameter.predict": "¿Quantes predicciones?",
 	"billing.parameter.qa": "¿Cuántas respuestas generativas?",
 	"billing.parameter.searches": "¿Cuántas búsquedas?",
 	"billing.parameter.training": "¿Cuántas horas de entrenamientos?",
@@ -186,6 +190,7 @@
 	"billing.quotas": "Cuotas mensuales",
 	"billing.quotas.answers": "Respuesta generativa",
 	"billing.quotas.files": "Cantidad máxima de archivos",
+	"billing.quotas.files-up-to": "Archivos hasta",
 	"billing.quotas.ingestion": "Ingestión",
 	"billing.quotas.kbs": "Número de cajas de conocimiento",
 	"billing.quotas.medias": "Indexación de video y audio",
