Modify usage table parameters

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -86,12 +86,12 @@
 	"account.token_generation_warning": "Si generes un nou codi perdràs l’accés amb la clau actual i es perdran els processos que s'estiguin executant en aquests moments.",
 	"account.total_queries": "Nombre total de cerques",
 	"account.type.label": "Nivell",
-	"account.type.stash-basic": "Compte Basic",
 	"account.type.stash-business": "Compte Business",
 	"account.type.stash-developer": "Compte Starter/Developer",
 	"account.type.stash-enterprise": "Compte Enterprise",
+	"account.type.stash-growth": "Compte Growth",
+	"account.type.stash-starter": "Compte Starter",
 	"account.type.stash-startup": "Compte Startup",
-	"account.type.stash-team": "Compte Teams",
 	"account.type.stash-trial": "Compte de prova",
 	"account.users": "Gestió d'usuaris",
 	"account.users_amount": "Nombre total d'usuaris al compte",
