--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -86,12 +86,12 @@
 	"account.token_generation_warning": "Si generas un nuevo código perderás el acceso con la clave actual y se perderán los procesos que se estén ejecutando en estos momentos.",
 	"account.total_queries": "Número total de búsquedas",
 	"account.type.label": "Nivel",
-	"account.type.stash-basic": "Cuenta Basic",
 	"account.type.stash-business": "Cuenta Business",
 	"account.type.stash-developer": "Cuenta Starter/Developer",
 	"account.type.stash-enterprise": "Cuenta Enterprise",
+	"account.type.stash-growth": "Cuenta Growth",
+	"account.type.stash-starter": "Cuenta Starter",
 	"account.type.stash-startup": "Cuenta Startup",
-	"account.type.stash-team": "Cuenta Teams",
 	"account.type.stash-trial": "Cuenta de prueba",
 	"account.users": "Gestión de usuarios",
 	"account.users_amount": "Usuarios totales a la cuenta",
