--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -95,12 +95,12 @@
 	"account.token_generation_warning": "If you generate a new key, the current key will be disabled and any ongoing jobs will be lost",
 	"account.total_queries": "Total number of queries",
 	"account.type.label": "Tier",
-	"account.type.stash-basic": "Basic Account",
 	"account.type.stash-business": "Business Account",
 	"account.type.stash-developer": "Starter/Developer account",
 	"account.type.stash-enterprise": "Enterprise Account",
+	"account.type.stash-growth": "Growth account",
+	"account.type.stash-starter": "Starter account",
 	"account.type.stash-startup": "Startup account",
-	"account.type.stash-team": "Teams Account",
 	"account.type.stash-trial": "Trial Account",
 	"account.users": "Account users management",
 	"account.users_amount": "Total number of users in the account",
