[sc-6224] Implement new comparative price table new (#910)
* Update models

* Move old subscription table

* Add subscription table with new values

* Modify budget calculator parameters

* Modify usage table parameters

* Fix

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -86,12 +86,12 @@
 	"account.token_generation_warning": "Si generes un nou codi perdràs l’accés amb la clau actual i es perdran els processos que s'estiguin executant en aquests moments.",
 	"account.total_queries": "Nombre total de cerques",
 	"account.type.label": "Nivell",
-	"account.type.stash-basic": "Compte Basic",
 	"account.type.stash-business": "Compte Business",
 	"account.type.stash-developer": "Compte Starter/Developer",
 	"account.type.stash-enterprise": "Compte Enterprise",
+	"account.type.stash-growth": "Compte Growth",
+	"account.type.stash-starter": "Compte Starter",
 	"account.type.stash-startup": "Compte Startup",
-	"account.type.stash-team": "Compte Teams",
 	"account.type.stash-trial": "Compte de prova",
 	"account.users": "Gestió d'usuaris",
 	"account.users_amount": "Nombre total d'usuaris al compte",
@@ -120,6 +120,7 @@
 	"billing.assistance": "Si us plau, <a href=\"{{url}}\"contacta amb nosaltres</a> per obtenir ajuda",
 	"billing.billing_details": "Dades de facturació",
 	"billing.budget_calculator": "Calculadora de pressupost",
+	"billing.budget_calculator.help": "La calculadora de pressupost et permet fer un pressupost mensual en funció dels vostres requisits específics.",
 	"billing.budget_description": "Per evitar despeses excessives en els consums mensuals, us recomanem establir un límit mensual. Si no s'estableix un límit, es poden generar càrrecs inesperats pels consums que superin la quantitat assignada.",
 	"billing.budget_warning": "El sobreconsum actual es facturarà aquest mes.<br>\nLa modificació del pressupost entrará en vigor el mes següent.",
 	"billing.cancel_subscription": "Cancel·la subscripció",
@@ -138,6 +139,7 @@
 	"billing.email": "Factures enviades a",
 	"billing.enterprise_ready": "Llest par a l'empresa",
 	"billing.estimate_cost": "Estima el teu cost",
+	"billing.extra_paragraphs_cost": "Si es supera el límit de paràgrafs emmagatzemats, es cobrarà {{preu}} per cada paràgraf addicional.",
 	"billing.features.anon": "Anonimat de dades",
 	"billing.features.apikey": "Clau d'API autoallotjada",
 	"billing.features.boost": "Potenciador d'indexació",
@@ -170,9 +172,13 @@
 	"billing.monthly_estimation.description": "El cost estimat proporcionat es basa en els valors definits i està subjecte a canvis si es modifiquen aquests valors.",
 	"billing.not_company": "No soc una empresa",
 	"billing.order_number": "Número de comanda",
+	"billing.paragraphs_per_file": "Un fitxer de text de 10 pàgines conté aproximadament 300 paràgrafs",
 	"billing.parameter.files": "Quants documents?",
+	"billing.parameter.generative": "Quantes respostes generatives?",
 	"billing.parameter.media": "Quantes hores de vídeos/àudios?",
-	"billing.parameter.paragraphs": "Quants paràgrafs extrets?",
+	"billing.parameter.paragraphs": "Quants paràgrafs emmagatzemats?",
+	"billing.parameter.paragraphs_processed": "Quants paragrafs processats?",
+	"billing.parameter.predict": "Quantes prediccions?",
 	"billing.parameter.qa": "Quantes respostes generatives?",
 	"billing.parameter.searches": "Quantes cerques?",
 	"billing.parameter.training": "Quantes hores d'entrenament?",
@@ -184,10 +190,17 @@
 	"billing.quotas": "Quotes mensuals",
 	"billing.quotas.answers": "Resposta generativa",
 	"billing.quotas.files": "Nombre màxim de fitxers",
+	"billing.quotas.files-up-to": "Arxius fins a",
+	"billing.quotas.ingestion": "Ingestió",
 	"billing.quotas.kbs": "Nombre de caixes de coneixement",
 	"billing.quotas.medias": "Indexació de vídeo i àudio",
+	"billing.quotas.paragraphs": "Número de paràgrafs",
+	"billing.quotas.paragraphs_stored": "Paràgrafs emmagatzemats",
+	"billing.quotas.search_inference": "Cerca / Inferència",
 	"billing.quotas.searches": "Recerques",
-	"billing.quotas.training": "Formació",
+	"billing.quotas.storage": "Emmagatzematge",
+	"billing.quotas.train": "Entrenar",
+	"billing.quotas.training": "Entrenament",
 	"billing.quotas.up-to": "Fins a",
 	"billing.review.confirm_subscription": "Confirma la teva subscripció",
 	"billing.review.cost": "Subscripció mensual de {{cost}} + costos dels consums amb un límit mensual de {{budget}}",
