--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -86,12 +86,12 @@
 	"account.token_generation_warning": "Si generas un nuevo código perderás el acceso con la clave actual y se perderán los procesos que se estén ejecutando en estos momentos.",
 	"account.total_queries": "Número total de búsquedas",
 	"account.type.label": "Nivel",
-	"account.type.stash-basic": "Cuenta Basic",
 	"account.type.stash-business": "Cuenta Business",
 	"account.type.stash-developer": "Cuenta Starter/Developer",
 	"account.type.stash-enterprise": "Cuenta Enterprise",
+	"account.type.stash-growth": "Cuenta Growth",
+	"account.type.stash-starter": "Cuenta Starter",
 	"account.type.stash-startup": "Cuenta Startup",
-	"account.type.stash-team": "Cuenta Teams",
 	"account.type.stash-trial": "Cuenta de prueba",
 	"account.users": "Gestión de usuarios",
 	"account.users_amount": "Usuarios totales a la cuenta",
@@ -120,6 +120,7 @@
 	"billing.assistance": "Por favor, <a href=\"{{url}}\">contacta con nosotros</a> para obtener ayuda.",
 	"billing.billing_details": "Datos de facturación",
 	"billing.budget_calculator": "Calculadora de presupuesto",
+	"billing.budget_calculator.help": "La calculadora de presupuesto te permite hacer un presupuesto mensual basado en tus requisitos específicos.",
 	"billing.budget_description": "Para evitar gastos excesivos en los consumos mensuales, recomendamos establecer un límite mensual.<br> Si no se establece un límite, se pueden generar cargos inesperados por los consumos que excedan la cantidad asignada.",
 	"billing.budget_warning": "El sobreconsumo actual se facturará este mes.<br>\nEl cambio de presupuesto entrará en vigencia el próximo mes.",
 	"billing.cancel_subscription": "Cancela suscripción",
@@ -138,6 +139,7 @@
 	"billing.email": "Facturas enviadas a",
 	"billing.enterprise_ready": "Listo para la empresa",
 	"billing.estimate_cost": "Estima tu coste",
+	"billing.extra_paragraphs_cost": "Si se excede el límite de párrafos almacenados, se cobrarà {{price}} por cada párrafo adicional.",
 	"billing.features.anon": "Anonimización de datos",
 	"billing.features.apikey": "Clave de API autohospedada",
 	"billing.features.boost": "Refuerzo de indexación",
@@ -170,9 +172,13 @@
 	"billing.monthly_estimation.description": "El coste estimado proporcionado se basa en los valores definidos y está sujeto a cambios si se modifican estos valores.",
 	"billing.not_company": "No soy una empresa",
 	"billing.order_number": "Número de pedido",
+	"billing.paragraphs_per_file": "Un archivo de texto de 10 páginas contiene aproximadamente 300 párrafos",
 	"billing.parameter.files": "¿Cuántos documentos?",
+	"billing.parameter.generative": "¿Cuántas respuestas generativas?",
 	"billing.parameter.media": "¿Cuántas horas de videos/audios?",
-	"billing.parameter.paragraphs": "¿Cuántos párrafos extraídos?",
+	"billing.parameter.paragraphs": "¿Cuántos párrafos almacenados?",
+	"billing.parameter.paragraphs_processed": "¿Cuantos parrafos procesados?",
+	"billing.parameter.predict": "¿Quantes predicciones?",
 	"billing.parameter.qa": "¿Cuántas respuestas generativas?",
 	"billing.parameter.searches": "¿Cuántas búsquedas?",
 	"billing.parameter.training": "¿Cuántas horas de entrenamientos?",
@@ -184,10 +190,17 @@
 	"billing.quotas": "Cuotas mensuales",
 	"billing.quotas.answers": "Respuesta generativa",
 	"billing.quotas.files": "Cantidad máxima de archivos",
+	"billing.quotas.files-up-to": "Archivos hasta",
+	"billing.quotas.ingestion": "Ingestión",
 	"billing.quotas.kbs": "Número de cajas de conocimiento",
 	"billing.quotas.medias": "Indexación de video y audio",
+	"billing.quotas.paragraphs": "Número de parrafos",
+	"billing.quotas.paragraphs_stored": "Parrafos almacenados",
+	"billing.quotas.search_inference": "Búsqueda / Inferencia",
 	"billing.quotas.searches": "Búsquedas",
-	"billing.quotas.training": "Capacitación",
+	"billing.quotas.storage": "Almacenamiento",
+	"billing.quotas.train": "Entrenar",
+	"billing.quotas.training": "Entrenamiento",
 	"billing.quotas.up-to": "Hasta",
 	"billing.review.confirm_subscription": "Confirma tu suscripción",
 	"billing.review.cost": "Suscripción mensual de {{cost}}  + costes de los consumos con un límite mensual de {{budget}}",
