--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -95,12 +95,12 @@
 	"account.token_generation_warning": "If you generate a new key, the current key will be disabled and any ongoing jobs will be lost",
 	"account.total_queries": "Total number of queries",
 	"account.type.label": "Tier",
-	"account.type.stash-basic": "Basic Account",
 	"account.type.stash-business": "Business Account",
 	"account.type.stash-developer": "Starter/Developer account",
 	"account.type.stash-enterprise": "Enterprise Account",
+	"account.type.stash-growth": "Growth account",
+	"account.type.stash-starter": "Starter account",
 	"account.type.stash-startup": "Startup account",
-	"account.type.stash-team": "Teams Account",
 	"account.type.stash-trial": "Trial Account",
 	"account.users": "Account users management",
 	"account.users_amount": "Total number of users in the account",
@@ -131,6 +131,7 @@
 	"billing.billing_details": "Billing details",
 	"billing.budget": "On-demand budget",
 	"billing.budget_calculator": "Budget calculator",
+	"billing.budget_calculator.help": "The budget calculator will allow you to make a monthly budget based on your specific requirements.",
 	"billing.budget_description": "To prevent overspending on monthly consumables, we recommend setting a monthly economic limit.<br> Failing to set a limit may result in unexpected charges for any consumption beyond the allotted amount.",
 	"billing.budget_warning": "The current overconsumption will be billed this month.<br>\nThe budget change will take effect next month.",
 	"billing.cancel_subscription": "Cancel subscription",
@@ -150,6 +151,7 @@
 	"billing.email": "Invoices sent to",
 	"billing.enterprise_ready": "We are enterprise ready",
 	"billing.estimate_cost": "Estimate your cost",
+	"billing.extra_paragraphs_cost": "If the stored paragraph limit included is exceeded, we will charge {{price}} /stored paragraph.",
 	"billing.features.anon": "Data Anonymization",
 	"billing.features.apikey": "Self-hosted API key",
 	"billing.features.boost": "Indexing booster",
@@ -182,9 +184,13 @@
 	"billing.monthly_estimation.description": "The estimated cost provided is based on the defined values and is subject to change if these values are modified.",
 	"billing.not_company": "I'm not a company",
 	"billing.order_number": "Order number",
+	"billing.paragraphs_per_file": "A 10-page text file contains approximately 300 paragraphs",
 	"billing.parameter.files": "How many documents?",
+	"billing.parameter.generative": "How many generative answers?",
 	"billing.parameter.media": "How many hours of videos/audios?",
-	"billing.parameter.paragraphs": "How many extracted paragraphs?",
+	"billing.parameter.paragraphs": "How many stored paragraphs?",
+	"billing.parameter.paragraphs_processed": "How many processed paragraphs?",
+	"billing.parameter.predict": "How many predicts?",
 	"billing.parameter.qa": "How many generative answers?",
 	"billing.parameter.searches": "How many searches?",
 	"billing.parameter.training": "How many hours of training?",
@@ -196,9 +202,16 @@
 	"billing.quotas": "Monthly quotas",
 	"billing.quotas.answers": "Generative answer",
 	"billing.quotas.files": "Maximum number of files",
+	"billing.quotas.files-up-to": "Files up to",
+	"billing.quotas.ingestion": "Ingestion",
 	"billing.quotas.kbs": "Number of knowledge boxes",
 	"billing.quotas.medias": "Video & audio indexing ",
+	"billing.quotas.paragraphs": "Number of paragraph",
+	"billing.quotas.paragraphs_stored": "Paragraph stored",
+	"billing.quotas.search_inference": "Search / Inference",
 	"billing.quotas.searches": "Searches",
+	"billing.quotas.storage": "Storage",
+	"billing.quotas.train": "Train",
 	"billing.quotas.training": "Training",
 	"billing.quotas.up-to": "Up to",
 	"billing.review.confirm_subscription": "Confirm your subscription",
